--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,24 +3,15 @@
     "es2021": true,
     "node": true
   },
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "ignorePatterns": [".eslintrc.json"],
   "rules": {
     "no-console": "off",
-    "import/extensions": "off",
-    "comma-dangle": [
-      "error",
-      {
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "never",
-        "arrays": "only-multiline"
-      }
-    ]
+    "import/extensions": "off"
   }
 }
