--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
