--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@rollup/plugin-terser": "^0.4.4",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rollup": "^4.0.2"
