--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "lint": "eslint .",
     "prettier": "prettier -w \"src/**/*.js\"",
-    "seed": "node seed/seed.js",
+    "start": "node dist/api.bundle.cjs",
     "dev": "nodemon src/app.js",
-    "build": "ENVIRONMENT=$ENVIRONMENT rollup -c"
+    "build": "rollup --config"
   },
   "keywords": [],
   "author": "",
