--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint --fix .",
+    "lint": "eslint --fix \"src/**/*.js\"",
     "prettier": "prettier --write \"src/**/*.js\"",
     "start": "node dist/api.bundle.cjs",
     "dev": "nodemon src/app.js",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status": "^1.7.3",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
