--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "import/extensions": "off",
     "object-curly-newline": "off",
     "no-underscore-dangle": "off",
+    "import/prefer-default-export": "off",
     "comma-dangle": [
       "error",
       {
