chore: add comments to variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+# Port number
 PORT=
+
+# URI of the MongoDB
 DB_URI=
+
+# JWT secret key
 JWT_SECRET=
+# The number of seconds before the access token expires (default is 2 hours)
 JWT_EXPIRATION=
+
+# List of allowed origins, separated by commas (default is '*')
 ALLOWED_ORIGINS=
